# luismarrero.me

./: .env.example  .gitignore  .update_log  AGENTS.md  CLAUDE.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: launch.json
.github/: deepseek-monitor-state.json
.github/workflows/: generate-poem.yml  monitor-deepseek.yml  rebuild-site.yml  send-notification.yml
docs/open-source-journey/: AI-USAGE.md  ARTICLE-NOTES.md  BACKLOG.md  EVIDENCE.md  LOG.md  README.md  ROADMAP.md  STATUS.md
public/: robots.txt  site.webmanifest
scripts/: deepseek_monitor.py  generate_poem.py  notifications.py
src/: content.config.ts
src/ai_poems/: 2025-07-11.json  2025-07-12.json  2025-07-13.json  2025-07-14.json  2025-07-15.json  2025-07-16.json  2025-07-17.json  2025-07-18.json  2025-07-19.json  2025-07-20.json  2025-07-21.json  2025-07-22.json  2025-07-23.json  2025-07-24.json  2025-07-25.json  2025-07-26.json  2025-07-27.json  2025-07-28.json  2025-07-29.json  2025-07-30.json  2025-07-31.json  2025-08-01.json  2025-08-02.json  2025-08-03.json  2025-08-04.json  2025-08-05.json  2025-08-06.json  2025-08-07.json  2025-08-08.json  2025-08-09.json  2025-08-10.json  2025-08-11.json  2025-08-12.json  2025-08-13.json  2025-08-14.json  2025-08-15.json  2025-08-16.json  2025-08-17.json  2025-08-18.json  2025-08-19.json  (+337 more)
src/components/: Arrow.astro  CosmeticText.astro  Footer.astro  Head.astro  Header.astro  Menu.astro  Navbar.astro  PoemArchive.astro  Poems.astro  PostArchive.astro  PostCard.astro  (+1 more)
tests/: ai_poems.test.ts  test_generate_poem.py
(+50 files in other folders)
